Use viewport units instead of absolute units to fix overflows on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,28 +1,3 @@
-@mixin border-radius($radius...) {
-  -webkit-border-radius: $radius;
-     -moz-border-radius: $radius;
-          border-radius: $radius;
-}
-
-@mixin transition($transition...) {
-  -webkit-transition: $transition;
-     -moz-transition: $transition;
-       -o-transition: $transition;
-          transition: $transition;
-}
-
-
-nav {
-
-  ul {
-    padding: 0;
-    margin: 0;
-    white-space: nowrap;
-  }
-
-  li { display: inline-block; }
-}
-
 $font-style: 'Open Sans', sans-serif;
 $heading-font: 'Muli', sans-serif;
 
