--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -49,11 +49,11 @@ footer {
 		}
 
 		h1 {
-				font-size: 9rem;
+				font-size: 10vh;
 		}
 
 		h2 {
-				font-size: 3rem;
+				font-size: 3vh;
 				
 		}
 
@@ -66,6 +66,6 @@ footer {
 }
 .site-banner > h1 {
 		color: $color2;
-		font-size: 6.5em;
+		font-size: 10vh;
 		
 }
